--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ h1{
         width: 85%;
         margin-top: 30px;
     }
+    h1{
+        width: 50%;
+    }
 }
 .sub1,.sub2,.sub3{
     padding:5px 10px 10px 10px;
