--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1{
 }
 @media (max-width:850px){
     nav{
-        height: 60px;
+        height: 80px;
     }
     img{
         margin-top: 10px;
@@ -60,6 +60,9 @@ h1{
     .main2{
         width: 85%;
         margin-top: 30px;
+    }
+    h1{
+        font-size:120%;
     }
 }
 .sub1,.sub2,.sub3{
