--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ h1{
         font-size:120%;
     }
 }
+@media (max-width:760px){
+    h1{
+        font-size: 90%;
+    }
+
+}
 .sub1,.sub2,.sub3{
     padding:5px 10px 10px 10px;
     margin-top: 30px;
