--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ button{
     padding-top:8px  ;
     padding-left: 8px;
     padding-bottom: 8px;
+    cursor: pointer;
 }
 .sub1{
     border-top: 3px solid rgb(120, 245, 120);
