--- a/style1.css
+++ b/style1.css
@@ -118,7 +118,7 @@ div
     padding-top:8px  ;
     padding-bottom: 8px;
     background-color:rgb(120, 245, 120) ;
-
+    cursor: pointer;
     margin-right: 40px;
     margin-bottom: 15px;
 }
