--- a/style1.css
+++ b/style1.css
@@ -33,6 +33,12 @@ img
         #si{
             width: 20%;
         }
+        #reg{
+            width: 60%;
+        }
+        #pwd{
+            width: 60%;
+        }
     }
 @media (min-width:851px) and (max-width:991px)
     {
@@ -54,6 +60,12 @@ img
         }
         #si{
             width: 25%;
+        }
+        #reg{
+            width: 60%;
+        }
+        #pwd{
+            width: 60%;
         }
     }
 @media (max-width:850px)
@@ -84,6 +96,12 @@ img
         #si{
             width: 20%;
         }
+        #reg{
+            width: 70%;
+        }
+        #pwd{
+            width: 70%;
+        }
     }
 div
 {       
@@ -94,7 +112,7 @@ div
     }
 #reg{
     border: 2px solid;
-    width: 60%;
+    
     height: 25px;
     background-color: rgb(229, 246, 250);
 }
@@ -102,7 +120,7 @@ div
     border: 2px solid;
     height: 25px;
     margin-top: 10px;
-    width: 60%;
+    
     margin-bottom: 10px;
     background-color: rgb(229, 246, 250);
 }
